--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-    "name": "node-red-contrib-classifier-bayes",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "make tests"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+ssh://github.com/petitchevalroux/node-red-contrib-classifier-bayes.git"
-    },
-    "author": "Patrick Poulain",
-    "license": "GPL-3.0",
-    "bugs": {
-        "url": "https://github.com/petitchevalroux/node-red-contrib-classifier-bayes/issues"
-    },
-    "homepage": "https://github.com/petitchevalroux/node-red-contrib-classifier-bayes#readme",
-    "devDependencies": {
-        "eslint": "^3.3.1",
-        "eslint-plugin-promise": "^2.0.1",
-        "istanbul": "^0.4.4",
-        "js-beautify": "^1.6.3",
-        "mocha": "^3.0.2",
-        "sinon": "^1.17.5"
+  "name": "node-red-contrib-classifier-bayes",
+  "version": "0.0.1",
+  "description": "NodeRed node to train and use bayes classifier",
+  "scripts": {
+    "test": "make tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://github.com/petitchevalroux/node-red-contrib-classifier-bayes.git"
+  },
+  "author": "Patrick Poulain",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/petitchevalroux/node-red-contrib-classifier-bayes/issues"
+  },
+  "homepage": "https://github.com/petitchevalroux/node-red-contrib-classifier-bayes#readme",
+  "devDependencies": {
+    "eslint": "^3.3.1",
+    "eslint-plugin-promise": "^2.0.1",
+    "istanbul": "^0.4.4",
+    "js-beautify": "^1.6.3",
+    "mocha": "^3.0.2",
+    "sinon": "^1.17.5"
+  },
+  "dependencies": {
+    "classifier": "^0.1.0"
+  },
+  "node-red": {
+    "nodes": {
+      "bayes-training": "src/training.js"
     }
+  }
 }
